update-getting-started

--- a/src/content/docs/en/pages/get-started/get-started.mdx
+++ b/src/content/docs/en/pages/get-started/get-started.mdx
@@ -14,30 +14,34 @@ You're taking the first steps to become part of a hyper-connected economy throug
 
 This documentation page will help you start your [Azion's journey](#azions-journey). It includes building your first edge application using a template, further setting up, and connecting your newly created application to domains and traffic, as well as viewing metrics.
 
+---
+
 ## Before you begin
 
-If you're looking for more information on edge computing and how Azion's products engage and connect the community, take some time to explore the dedicated documentation:
+If you're looking for more information on edge computing and Azion's core concepts, take some time to explore the dedicated documentation:
 
-<Button href="/en/documentation/products/edge-foundations/what-is-edge-computing/" text="Go to edge foundations" variant="secondary"> 
+<Button href="/en/documentation/products/azion-core-concepts/" text="Go to Azion core concepts" variant="secondary"> 
 
 </Button>
 
 <br />
 
-<Button href="/en/documentation/products/azion-foundations/about-azion-edge-platform/" text="Go to Azion foundations" variant="secondary"> 
+<Button href="/en/documentation/products/edge-foundations/what-is-edge-computing/" text="Go to the Learning section" variant="secondary"> 
 
 </Button>
 
 If you don't have an Azion account yet, you can go to the [sign-up page](https://manager.azion.com/signup) or find more information in the [Creating an account documentation](/en/documentation/products/accounts/creating-account/).
+
+---
 
 ## Azion's journey
 
 Azion provides different products and modules based on edge computing technology, grouped into four main categories that reflect each step in the process of building and managing edge applications:
 
 - [Build](/en/documentation/products/guides/build/overview/)
-- [Secure](/en/documentation/products/guides/secure/overview/)
-- [Deploy](/en/documentation/products/guides/deploy/overview/)
-- [Observe](/en/documentation/products/guides/observe/overview/)
+- [Secure](https://www.azion.com/en/documentation/products/secure/)
+- [Deploy](https://www.azion.com/en/documentation/products/deploy/)
+- [Observe](https://www.azion.com/en/documentation/products/observe/)
 
 Following the *suggested journey* presented below, you can experience this whole process first hand:
 
